Kotlin default arguments (#369)
* Default arguments in function / constructor declarations

* Improve defaults detection and parsing, and add option for unknown defaults

* Fix ambiguous wording

* Clean up with J12-17 features

* Describe in detail what happens to default parameters

* Fix cases with 32 or more parameters

* Improve wording about default constructors

* Clean up imports

* Fix problems with long/double parameters